libs/bng/test/negative/N0300_invalid_compartment_dimension.bngl
# FAIL
# OUTPUT: error: Compartment 'A' has invalid dimension of value 4, the only values allowed are 2 or 3.


begin compartments
   A 4 1
end compartments
